[gd_scene load_steps=5 format=3 uid="uid://c2vbx7gpljslx"]

[ext_resource type="Script" uid="uid://ccrclt4rl25cc" path="res://scenes/ui/enemy_tooltip_popup.gd" id="1_5i7e6"]
[ext_resource type="Texture2D" uid="uid://wy0km0q1cnv8" path="res://art/tile_0119.png" id="2_5i7e6"]
[ext_resource type="FontFile" uid="uid://d3fuaowohtamf" path="res://art/Font Styles/PressStart2P-Regular.ttf" id="3_tj8xd"]

[sub_resource type="LabelSettings" id="LabelSettings_tmxuf"]
font = ExtResource("3_tj8xd")
font_size = 8

[node name="EnemyTooltipPopup" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -427.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5i7e6")

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_top = 19.0
offset_right = 129.21507
offset_bottom = 150.47845
scale = Vector2(1.646, 1.833)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 8.0
offset_top = 30.0
offset_right = 207.0
offset_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("2_5i7e6")
stretch_mode = 5

[node name="EnemyName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_tmxuf")
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Skills"
horizontal_alignment = 1

[node name="IntentScroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IntentGrid" type="GridContainer" parent="VBoxContainer/IntentScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
